--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -2,18 +2,18 @@
 $paper: #ffffff;
 
 // primary
-$primaryLight: #eef2f6;
-$primaryMain: #2196f3;
-$primaryDark: #1e88e5;
-$primary200: #90caf9;
-$primary800: #1565c0;
+$primaryLight: #efeef6;
+$primaryMain: #2a28b9;
+$primaryDark: #1e32e5;
+$primary200: #9092f9;
+$primary800: #153dc0;
 
-// secondary
-$secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
-$secondary200: #b39ddb;
-$secondary800: #4527a0;
+// secondaryx 
+$secondaryLight: #e9e7f6;
+$secondaryMain: #3a3cb7;
+$secondaryDark: #4835b1;
+$secondary200: #aa9ddb;
+$secondary800: #3327a0;
 
 // success Colors
 $successLight: #b9f6ca;
