--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'themes-vars.module.scss';
 
 // third-party
-@import './dist/styles.css';
+//@import './dist/styles.css';
 
 // ==============================|| LIGHT BOX ||============================== //
 .fullscreen .react-images__blanket {
